# mini_curl_win

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  build_cmake.bat
examples/: example_curl_dll_direct.c  example_full_app.c
list-api/: API.md  list-app.md
mini_curl/: CMakeLists.txt  README.md
mini_curl/examples/: api_client.h  api_client_c.cpp  api_client_c.h  example_api_simple.c
mini_curl/include/: mini_curl_c.h  winhttp_curl.h
mini_curl/src/: mini_curl_c.cpp  winhttp_curl.cpp
mini_http_server/: CMakeLists.txt  config.example.json
mini_http_server/examples/: example_oidc.c  example_simple.c  simple_http_server.cpp
mini_http_server/include/: mini_http_server.h  oidc_config.h  oidc_token_exchange.h
mini_http_server/src/: mini_http_server_c.cpp  oidc_callback_server.cpp  oidc_config.cpp  oidc_token_exchange.cpp
